@@ -5,9 +5,7 @@ import com.ticket.terminal.mapper.OrganizationMapper;
 import com.ticket.terminal.repository.OrganizationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,7 +17,7 @@ public class OrganizationService {
     public List<OrganizationDto> getAllOrganization() {
         return organizationRepository.findAll().stream()
                 .map(organizationMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
